--- a/client/package.json
+++ b/client/package.json
@@ -33,5 +33,7 @@
     "react-on-rails": "6.10.1",
     "webpack": "^2.3.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "file-loader": "^0.11.2"
+  }
 }
