--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   "scripts": {
     "postinstall": "cd client && yarn install",
     "rails-server": "echo 'visit http://localhost:3000/hello_world' && foreman start -f Procfile.dev",
-    "test": "rspec"
-  }
+    "test": "rspec",
+    "build:production": "(cd client && yarn run build:production --silent)",
+    "build:production:client": "(cd client && yarn run build:production:client --silent)",
+    "build:production:server": "(cd client && yarn run build:production:server --silent)"
+  },
+  "cacheDirectories": [
+  "node_modules",
+  "client/node_modules"
+  ]
 }
