--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-webpack-rails-tutorial",
+  "name": "bamboo_root",
   "version": "0.0.1",
   "private": true,
   "engines": {
@@ -8,11 +8,8 @@
   },
   "scripts": {
     "postinstall": "cd client && yarn install",
-    "rails-server": "echo 'visit http://localhost:3000/hello_world' && foreman start -f Procfile.dev",
     "test": "rspec",
-    "build:production": "(cd client && yarn run build:production --silent)",
-    "build:production:client": "(cd client && yarn run build:production:client --silent)",
-    "build:production:server": "(cd client && yarn run build:production:server --silent)"
+    "build:production": "(cd client && yarn run build:production)",
   },
   "cacheDirectories": [
   "node_modules",
