--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "npm": "4.1.1"
   },
   "scripts": {
+    "postinstall": "yarn link react-on-rails",
     "build:test": "webpack --config webpack.config.js",
     "build:production": "NODE_ENV=production webpack --config webpack.config.js",
     "build:development": "webpack -w --config webpack.config.js"
@@ -31,9 +32,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-on-rails": "6.10.1",
-    "webpack": "^2.3.3"
-  },
-  "devDependencies": {
-    "file-loader": "^0.11.2"
+    "webpack": "^2.3.3",
+    "file-loader": "^0.11.2",
+    "uuid": "^3.0.1"
   }
 }
