--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "npm": "4.1.1"
   },
   "scripts": {
-    "postinstall": "cd client && yarn install",
+    "postinstall": "cd ./client && yarn install",
     "test": "rspec",
-    "build:production": "(cd client && yarn run build:production --silent)",
-    "build:production:client": "(cd client && yarn run build:production:client --silent)",
-    "build:production:server": "(cd client && yarn run build:production:server --silent)"
+    "build:clean": "rm -rf public/webpack || true",
+    "build:production": "(cd client && yarn run build:production --silent)"
   },
   "cacheDirectories": [
   "node_modules",
