--- a/client/package.json
+++ b/client/package.json
@@ -27,12 +27,16 @@
     "babel-runtime": "^6.23.0",
     "es5-shim": "^4.5.9",
     "expose-loader": "^0.7.3",
+    "file-loader": "^0.11.2",
     "imports-loader": "^0.7.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-on-rails": "6.10.1",
+    "react-search-input": "^0.11.2",
+    "uuid": "^3.0.1",
     "webpack": "^2.3.3",
-    "file-loader": "^0.11.2",
-    "uuid": "^3.0.1"
+    "create-react-class": "^15.5.2",
+    "fuse.js": "^3.0.0",
+    "prop-types": "^15.5.8"
   }
 }
